--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Dragbar Demo</title>
 </head>
 <body>
-    <script src="/js/main.js"></script>
+    <script src="/js/main.js" defer></script>
     <h1>Dragbaar Balkje</h1>
     <button onclick="send()">Verzend Data</button>
 
