--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,62 @@
     </thead>
     <tbody>
 
-        <tr data-id="001">
-        <td>001</td>
+        <tr data-id="002">
+        <td>002</td>
+        <td>1</td>
+        <td><input type="number" min="0" max="100" value="30" class="start"></td>
+        <td><input type="number" min="0" max="100" value="50" class="end"></td>
+        <td>
+            <div class="timeline">
+            <div class="bar green">
+                <div class="handle left"></div>
+                <div class="handle right"></div>
+            </div>
+            <div class="bar yellow"></div>
+            </div>
+        </td>
+        <td>42.7</td>
+        <td>35.6</td>
+        </tr>
+
+        <tr data-id="005">
+        <td>005</td>
+        <td>1</td>
+        <td><input type="number" min="0" max="100" value="30" class="start"></td>
+        <td><input type="number" min="0" max="100" value="50" class="end"></td>
+        <td>
+            <div class="timeline">
+            <div class="bar green">
+                <div class="handle left"></div>
+                <div class="handle right"></div>
+            </div>
+            <div class="bar yellow"></div>
+            </div>
+        </td>
+        <td>42.7</td>
+        <td>35.6</td>
+        </tr>
+
+        <tr data-id="008">
+        <td>008</td>
+        <td>1</td>
+        <td><input type="number" min="0" max="100" value="30" class="start"></td>
+        <td><input type="number" min="0" max="100" value="50" class="end"></td>
+        <td>
+            <div class="timeline">
+            <div class="bar green">
+                <div class="handle left"></div>
+                <div class="handle right"></div>
+            </div>
+            <div class="bar yellow"></div>
+            </div>
+        </td>
+        <td>42.7</td>
+        <td>35.6</td>
+        </tr>
+
+        <tr data-id="011">
+        <td>011</td>
         <td>1</td>
         <td><input type="number" min="0" max="100" value="30" class="start"></td>
         <td><input type="number" min="0" max="100" value="50" class="end"></td>
