--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
             </div>
             <div class="bar yellow"></div>
             </div>
+            <div class="gap-line left-gap"></div>
+            <div class="gap-line middle-gap"></div>
+            <div class="gap-line right-gap"></div>
         </td>
         <td>42.7</td>
         <td>35.6</td>
