--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,6 @@
             </div>
             <div class="bar yellow"></div>
             <div class="gap-line left-gap"></div>
-            <div class="gap-line middle-gap"></div>
             <div class="gap-line right-gap"></div>
             </div>
             
@@ -74,7 +73,7 @@
                 <div class="handle left"></div>
                 <div class="handle right"></div>
             </div>
-            <div class="bar yellow"></div>
+            <div class="bar yellow free"></div>
             </div>
         </td>
         <td>42.7</td>
