--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <script src="/js/main.js" defer></script>
+
+    <div class="tabs">
+        <button class="tab-button" data-tab="matrix">Matrix</button>
+        <button class="tab-button" data-tab="instellingen">Instellingen</button>
+    </div>
+
     <h1>Dragbaar Balkje</h1>
     <button onclick="send()">Verzend Data</button>
 
