--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
         <button class="tab-button" data-tab="instellingen">Instellingen</button>
     </div>
 
+    <div class="tab-content" id="matrix">Hier komt de matrix</div>
+    <div class="tab-content" id="instellingen" hidden>Instellingen hier</div>
+
     <h1>Dragbaar Balkje</h1>
     <button onclick="send()">Verzend Data</button>
 
